# trend-scout-enterprise

./: .dockerignore  .gitignore  README.md  REFACTOR_REPORT.md  docker-compose.yml  test_plan.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_bcrypt_hash_columns.py  003_signal_review.py  004_signal_review_feedback_type.py  005_signal_review_fk_cascade.py  006_signal_embeddings.py
backend/scripts/: smoke_test.py
backend/src/trend_scout_enterprise/: main.py
backend/src/trend_scout_enterprise/agents/: __init__.py  base.py  trend_analyst.py
backend/src/trend_scout_enterprise/api/: __init__.py  auth_router.py  embed_token_router.py  health_router.py  llm_fallback_router.py  reports_router.py  review_assignment_router.py  scans_router.py  schedule_router.py  settings_router.py  sharepoint_router.py  signals_router.py  sources_router.py  trends_router.py  workspace_router.py
backend/src/trend_scout_enterprise/cli/: __init__.py  backfill_embeddings.py  migrate_sqlite_to_postgres.py
backend/src/trend_scout_enterprise/core/: audit.py  config.py  database.py  dependencies.py  dummy_auth.py  encryption.py  rate_limit.py  security.py  security_headers.py
backend/src/trend_scout_enterprise/events/: __init__.py  bus.py
backend/src/trend_scout_enterprise/models/: __init__.py  api_key.py  audit_log.py  auth.py  embed_token.py  llm_fallback.py  llm_provider.py  models.py  raw_item.py  report.py  review_assignment.py  schedule.py  scoring.py  source.py  (+5 more)
backend/tests/: conftest.py  test_agents.py  test_analysis_service.py  test_anomaly_service.py  test_api.py  test_audit.py  test_auth.py  test_embed_token.py  test_event_bus.py  test_jwt_rs256.py  test_llm_fallback.py  test_llm_service.py  test_postgres.py  test_report_service.py  test_reports.py  test_review_assignment_api.py  test_scan_graph.py  test_scanners.py  test_schedules.py  test_scoring_service.py  test_security_bcrypt.py  test_security_headers.py  test_sharepoint.py  test_signal_review.py  test_smoke.py  test_sources.py  test_trends.py  test_url_validator.py  test_vector_search.py
(+112 files in other folders)
