[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-scout-enterprise"
version = "0.1.0"
description = "AI-powered trend scouting automation for enterprise business teams"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Mars", email = "mars@example.com"}
]
keywords = ["trend-scouting", "ai", "enterprise", "sharepoint", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4 is incompatible with bcrypt>=4.1 (wrap-bug self-test fails
    # with ValueError on bcrypt 5.x), so pin bcrypt below 4.1.
    "bcrypt<4.1",
    "cryptography>=42.0",
    "weasyprint>=62.0",
    "python-pptx>=1.0",
    "pillow>=10.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "markdown>=3.6",
    "click>=8.1",
    "structlog>=24.1",
    "croniter>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "requests>=2.31",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "bandit>=1.7",
]

[project.scripts]
tse = "trend_scout_enterprise.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_scout_enterprise"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
